# projeto_fast_api

./: .coverage  .gitignore  database.db  pyproject.toml  testeeeeeee
migrations/: env.py
migrations/versions/: 2abf0af88dbc_create_users_table.py  3579ead0aee6_create_users_table.py  760f8c11bd09_table.py  8fde1e2dffdd_create_users_table.py  a76fc617138a_create_users_table.py  ae6bbfaaa59a_update_users_table.py  b6da37304758_upgrade_user_time.py  fdbbf166e599_tempo_da_modificação_no_perfil.py
projeto_fast_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
